crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__custom_format_direct_call.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"format\":\"currency\",\"type\":\"string\"}"
expression: code
---
struct Validator;
#[doc(hidden)]
#[allow(non_snake_case, dead_code, unused_variables, unreachable_code, clippy::all)]
mod __validator_impl {
    use super::*;
    pub(super) fn is_valid(instance: &serde_json::Value) -> bool {
        match instance {
            serde_json::Value::String(s) => crate::formats::is_currency(s),
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: &'__i serde_json::Value,
        __path: &jsonschema::paths::LazyLocation,
    ) -> Option<jsonschema::ValidationError<'__i>> {
        match instance {
            serde_json::Value::String(s) => {
                if !(crate::formats::is_currency(s)) {
                    return Some(
                        jsonschema::__private::error::format(
                            "/format",
                            __path.into(),
                            instance,
                            "currency",
                        ),
                    );
                }
            }
            _ => {
                return Some(
                    jsonschema::__private::error::single_type(
                        "/type",
                        __path.into(),
                        instance,
                        jsonschema::JsonType::String,
                    ),
                );
            }
        }
        None
    }
}
impl Validator {
    pub fn is_valid(instance: &serde_json::Value) -> bool {
        __validator_impl::is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i serde_json::Value,
    ) -> ::std::result::Result<(), jsonschema::ValidationError<'__i>> {
        match __validator_impl::validate(
            instance,
            &jsonschema::paths::LazyLocation::new(),
        ) {
            Some(e) => Err(e),
            None => Ok(()),
        }
    }
}
