crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__duplicate_regex_literals_deduplicated.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"additionalProperties\":false,\"patternProperties\":{\"^[a-z]{2,}$\":{\"type\":\"string\"}},\"propertyNames\":{\"pattern\":\"^[a-z]{2,}$\"},\"type\":\"object\"}"
expression: code
---
struct Validator;
#[doc(hidden)]
#[allow(non_snake_case, dead_code, unused_variables, unreachable_code, clippy::all)]
mod __validator_impl {
    use super::*;
    #[inline]
    fn __jsonschema_regex_0(subject: &str) -> bool {
        static REGEX: std::sync::LazyLock<
            Option<jsonschema::__private::fancy_regex::Regex>,
        > = std::sync::LazyLock::new(|| {
            let mut builder = jsonschema::__private::fancy_regex::RegexBuilder::new(
                "^[a-z]{2,}$",
            );
            builder.build().ok()
        });
        REGEX.as_ref().is_some_and(|re| re.is_match(subject).unwrap_or(false))
    }
    pub(super) fn is_valid(instance: &serde_json::Value) -> bool {
        match instance {
            serde_json::Value::Object(obj) => {
                ({
                    let __object_pass = obj
                        .iter()
                        .all(|(key, instance)| {
                            let mut covered = false;
                            if { __jsonschema_regex_0(key.as_str()) } {
                                if !(instance.is_string()) {
                                    return false;
                                }
                                covered = true;
                            }
                            if !covered {
                                return false;
                            }
                            true
                        });
                    __object_pass
                }) && (obj.keys().all(|s| { __jsonschema_regex_0(s) }))
            }
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: &'__i serde_json::Value,
        __path: &jsonschema::paths::LazyLocation,
    ) -> Option<jsonschema::ValidationError<'__i>> {
        match instance {
            serde_json::Value::Object(obj) => {
                for key in obj.keys() {
                    let s = key;
                    if !(__jsonschema_regex_0(s)) {
                        let __key_val: serde_json::Value = serde_json::Value::String(
                            key.clone(),
                        );
                        let instance = &__key_val;
                        if let Some(__e) = (|| -> Option<
                            jsonschema::ValidationError<'_>,
                        > {
                            if !(__jsonschema_regex_0(s)) {
                                return Some(
                                    jsonschema::__private::error::pattern(
                                        "/propertyNames/pattern",
                                        __path.into(),
                                        instance,
                                        "^[a-z]{2,}$",
                                    ),
                                );
                            }
                            None
                        })()
                            .map(|e| e.to_owned())
                        {
                            return Some(__e);
                        }
                    }
                }
                if let Some(obj) = instance.as_object() {
                    for (key, value) in obj.iter() {
                        let key_str = key.as_str();
                        let mut covered = false;
                        if { __jsonschema_regex_0(key.as_str()) } {
                            let instance = value;
                            let __path = &__path.push(key_str);
                            if !(instance.is_string()) {
                                return Some(
                                    jsonschema::__private::error::single_type(
                                        "/patternProperties/^[a-z]{2,}$/type",
                                        __path.into(),
                                        instance,
                                        jsonschema::JsonType::String,
                                    ),
                                );
                            }
                            covered = true;
                        }
                        if !covered {
                            return Some(
                                jsonschema::__private::error::additional_properties(
                                    "/additionalProperties",
                                    __path.into(),
                                    instance,
                                    vec![key.clone()],
                                ),
                            );
                        }
                    }
                }
            }
            _ => {
                return Some(
                    jsonschema::__private::error::single_type(
                        "/type",
                        __path.into(),
                        instance,
                        jsonschema::JsonType::Object,
                    ),
                );
            }
        }
        None
    }
}
impl Validator {
    pub fn is_valid(instance: &serde_json::Value) -> bool {
        __validator_impl::is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i serde_json::Value,
    ) -> ::std::result::Result<(), jsonschema::ValidationError<'__i>> {
        match __validator_impl::validate(
            instance,
            &jsonschema::paths::LazyLocation::new(),
        ) {
            Some(e) => Err(e),
            None => Ok(()),
        }
    }
}
