crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__empty_dependencies.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"dependencies\":{},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => true,
            _ => false,
        }
